# HairRecolorBot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/constants/: __init__.py  colors.py
app/handlers/private/: __init__.py  default.py  help_.py  photo.py  start.py
app/keyboards/private/: inline.py
app/services/: makeup.py  model.py  resnet.py  test.py
