[tool.poetry]
name = "recolor_bot"
version = "0.1.0"
description = "Fun telegram bot"
authors = ["rdfsx <m315498@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.3.4"
loguru = "0.6.0"
aiofile = "^3.7.2"
aiogram = "3.0.0b1"
beanie = "^1.8.12"
uvloop = "^0.16.0"
ujson = "^5.1.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
aiolimiter = "^1.0.0"
numpy = "^1.22.2"
torch = "1.9.0"
opencv-python = "^4.5.5"
torchvision = "0.10.0"
scikit-image = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
